# prevanced-backend

./: Cargo.toml  README.md  Rocket.toml  Spacefile
.github/workflows/: build_release.yml  generate_release.yml  ping.yml  test.yml
src/: auth.rs  db.rs  handlers.rs  main.rs  middleware.rs  types.rs
src/db/: mod.rs  types.rs
