[package]
name = "prevanced-backend"
version = "0.2.1"
edition = "2021"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
reqwest = { version = "^0.12", default-features = false, features = ["rustls-tls-native-roots"] }
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }

[profile.release]
strip = true
